# FoundationStereo

./: environment.yml  pyproject.toml
core/: extractor.py  foundation_stereo.py  geometry.py  submodule.py  update.py
core/utils/: utils.py
foundation_stereo/: __init__.py  extractor.py  foundation_stereo.py  geometry.py  submodule.py  update.py
foundation_stereo/utils/: utils.py
scripts/: run_demo.py
